@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
   <version>1200</version>
+  <dependencies>
+    <dependency>profile-ftw.colorbox:default</dependency>
+  </dependencies>
 </metadata>
